<resources>
    <!-- Essential strings -->
    <string name="app_name">jtbakker-SubBook</string>
    <string name="generic_textview">.</string>

    <!-- Strings for subscription list including date started,
         individual cost, and overall cost of all subscriptions -->
    <string name="main_individual_cost">$%1$s CAD/month</string>
    <string name="main_date_started">Started on %1$s</string>
    <string name="main_total_cost">Total Charge: $%1$s/month</string>

    <!-- Subscription add/delete/done button text -->
    <string name="subscription_create_button">Add New</string>
    <string name="subscription_view_delete">Delete</string>
    <string name="subscription_view_edit">Edit</string>
    <string name="subscription_view_back">Done</string>
    <string name="subscription_entry_title_new">New Subscription</string>
    <string name="subscription_entry_title_edit">Edit Subscription</string>
    <string name="subscription_entry_create">Create</string>
    <string name="subscription_entry_save">Save</string>
    <string name="subscription_entry_cancel">Cancel</string>

    <!-- Subscription add/edit/delete messages -->
    <string name="subscription_create">New Subscription</string>
    <string name="subscription_view">View Subscription</string>
    <string name="subscription_edit">Edit Subscription</string>
    <string name="subscription_delete">Delete subscription?</string>

    <!-- Subscription attribute labels for add/edit/view -->
    <string name="subscription_name_label">Name:</string>
    <string name="subscription_cost_label">Monthly Charge:</string>
    <string name="subscription_comment_entry_label">Comment (optional):</string>
    <string name="subscription_comment_view_label">Comment:</string>
    <string name="subscription_date_label">Date:</string>

    <!-- Strings for error message dialogs -->
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_button">OK</string>
    <string name="error_message_name_long">Maximum length of names is 20 characters.</string>
    <string name="error_message_name_empty">Name cannot be empty.</string>
    <string name="error_message_date_invalid">Date must be in YYYY-MM-DD format.</string>
    <string name="error_message_date_empty">Date cannot be empty.</string>
    <string name="error_message_cost_invalid">Cost must be a decimal value.</string>
    <string name="error_message_cost_negative">Monthly charge cannot be negative.</string>
    <string name="error_message_cost_empty">Monthly charge cannot be empty.</string>
    <string name="error_message_comment_long">Maximum length of comments is 30 characters.</string>
</resources>
